--- a/app/src/main/res/navigation/bottom_nav.xml
+++ b/app/src/main/res/navigation/bottom_nav.xml
@@ -9,23 +9,15 @@
         android:id="@+id/home_nav"
         android:name="com.example.myapplication.ui.home.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_detailActivity"
-            app:destination="@id/detailActivity" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/bookmark_nav"
         android:name="com.example.myapplication.ui.bookmark.BookmarkFragment"
         android:label="Bookmark"
-        tools:layout="@layout/fragment_bookmark" >
-        <action
-            android:id="@+id/action_bookmarkFragment_to_detailActivity"
-            app:destination="@id/detailActivity" />
-    </fragment>
-    <activity
-        android:id="@+id/detailActivity"
-        android:name="com.example.myapplication.ui.detail.DetailActivity"
-        android:label="activity_detail"
-        tools:layout="@layout/activity_detail" />
+        tools:layout="@layout/fragment_bookmark" />
+    <fragment
+        android:id="@+id/profile_nav"
+        android:name="com.example.myapplication.ui.profile.ProfileFragment"
+        android:label="Profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
